[metadata]
name = unimacro-jiangyiheng
version = 0.0.1
description = A simple code generate tool written in Python
author = Jiang Yiheng
author-email = jj11hh79@gmail.com
license = MIT
url = https://github.com/jj11hh/Unimacro
project_urls =
    Bug Tracker = https://github.com/jj11hh/Unimacro/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = True
packages = 
    unimacro
python_requires = >=3.6

[options.entry_points]
console_scripts =
    unimacro = unimacro.unimacro:main
